LIST OF CHANGES
---------------

 - gclp-specific function list for archival

release 48.2
 - added update_ml_warehouse
 - removed sf48 from list of staging areas in green room

release 48.1
 - pipeline-specific function lists
 - setting olb or qc_run flags to true results in olb or qc_run function lists used
 - qc_run flag on its own does not cause a change of lims driver
 - unused pipeline flags and options removed
 - for gclp runs, the analysis daemon to pass gclp function list to analysis pipeline

release 48.0
 - if LIMS cached data creation fails, pipeline script fails before submitting jobs:
     removed spider function from function order for both analysis and archival pipelines;
     introduced spider boolean flag that defaults to true;
     spider is run within prepare() method before the functions are executed
 - removed test and live section in configuration files
 - removed configuration for external script names
 - 'PB_cal_bam' analysis pipeline renamed to 'central'

release 47.9.1
 - Fixed split sanity checks

release 47.9
 - analysis daemon patch: ensure runfolder glob expressions are used when finding the runfolder path
 - use samtools1 (rather than samtools1_1) for samtools in archival and P4 pipelines

release 47.8.1
 - workaround bug: daemon missing new warehouse access

release 47.8
 - GCLP compliance-related daemon changes:
     runs will not be progressed to analysis/archival unless the
     flowcell barcode is set in the npg_tracking database;
     runs are not going to be progressed if it's impossible to fetch LIMs data for a flowcell;
     both analysis and archival daemon to pass runfolder path to the
     pipeline script;
     if batch_id is available, pass it to the analysis pipeline script    
 - use appropriate driver for samplesheet generation (xml, warehouse, ml_warehouse)
 - GCLP compliance-related pipeline changes:
     get the flowcell barcode needed for
     accessing LIMs information from runfolder path/content;